# cc-backend-generic

./: .gitignore  Dockerfile  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
CloudCart/: asgi.py  celery.py  error_codes.py  exceptions.py  settings.py  tests.py  urls.py  urls_public.py  urls_stores.py  utils.py  wsgi.py
TenantEmails/: apps.py  choices.py  models.py  tasks.py
TenantEmails/migrations/: 0001_initial.py
TenantUsers/: apps.py  choices.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
TenantUsers/migrations/: 0001_initial.py  0002_tenantuserinvitation_secret_hash_and_more.py
Tenants/: admin.py  models.py
Tenants/migrations/: 0001_initial.py  0002_alter_tenant_owner.py  0002_initial.py
UserAuth/: authentications.py  choices.py  exceptions.py  models.py  permissions.py  serializers.py  social_login.py  tasks.py  tests.py  urls.py  utils.py  views.py
UserAuth/migrations/: 0001_initial.py  0002_hotpauthentication_created_at_and_more.py  0002_secondstepverificationconfig_and_more.py  0003_hotpauthentication_last_used_and_more.py  0003_secondstepverificationconfig_email_verified_at_and_more.py  0004_alter_hotpauthentication_unique_together.py  0004_authentication_email_authentication_email_verified_and_more.py  0005_socialauthentications_delete_googleauthncredential_and_more.py
Users/: admin.py  managers.py  models.py  serializers.py  tests.py  urls.py  views.py
Users/migrations/: 0001_initial.py  0002_user_is_email_verified_alter_user_email.py
